# stoicgb

./: CMakeLists.txt  LICENSE  README.md
lib/tinyfiledialogs/: hello.c  hello_wchar_t.c  tinyfiledialogs.cpp
lib/tinyfiledialogs/dll_cs_lua_R_fortran_pascal/: LUA_plugin.tinyfiledialogs.cpp  tinyfiledialogs.r  tinyfiledialogs32.lib  tinyfiledialogs64.lib  tinyfiledialogsAppleSilicon.dylib  tinyfiledialogsIntel.dylib  tinyfiledialogsTest.cs  tinyfiledialogs_dll_mingw-32.bat  tinyfiledialogs_dll_mingw-w64-720.bat  tinyfiledialogs_dll_mingw-w64-810.bat  tinyfiledialogs_dylib.txt  tinyfiledialogs_so.txt
lib/tinyfiledialogs/dll_cs_lua_R_fortran_pascal/PascalABC/: tinyfd.pas
lib/tinyfiledialogs/dll_cs_lua_R_fortran_pascal/fortran/: tinyfd_main.f90  tinyfd_module.f90
lib/tinyfiledialogs/dll_cs_lua_R_fortran_pascal/freepascal/: hello.pas  tinyfd.pp
lib/tinyfiledialogs/more_dialogs/: tinyfd_moredialogs.c
roms/blargg/dmg_sound/rom_singles/: 01-registers.gb.sav  02-len ctr.gb.sav  03-trigger.gb.sav  04-sweep.gb.sav  05-sweep details.gb.sav  09-wave read while on.gb.sav  10-wave trigger while on.gb.sav  11-regs after power.gb.sav  (+1 more)
roms/blargg/mem_timing-2/: mem_timing.gb.sav
src/: APU.cpp  APU.hpp  Battery.cpp  Battery.hpp  Bus.cpp  Bus.hpp  Cartridge.cpp  Cartridge.hpp  DMA.cpp  DMA.hpp  GB.cpp  GB.hpp  IO.cpp  IO.hpp  InterruptHandler.cpp  InterruptHandler.hpp  Joypad.cpp  Joypad.hpp  LCD.cpp  LCD.hpp  MBC.cpp  MBC.hpp  PPU.cpp  PPU.hpp  Palette.hpp  Ram.cpp  Ram.hpp  SM83.cpp  SM83.hpp  Serial.cpp  Serial.hpp  Timer.cpp  Timer.hpp  UI.cpp  UI.hpp  common.hpp  main.cpp
